--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			<div class="header-area">
 				<!-- Start Navigation -->
 				<nav class="navbar navbar-default bootsnav navbar-fixed dark no-background">
-					<div class="container">
+					<div class="container-fluid">
 						<!-- Start Header Navigation -->
 						<div class="navbar-header">
 							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
