--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 			<div class="header-area">
 				<!-- Start Navigation -->
 				<nav class="navbar navbar-default bootsnav navbar-fixed dark no-background">
-					<div class="container-fluid">
+					<div class="container">
 						<!-- Start Header Navigation -->
 						<div class="navbar-header">
-							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-menu">
 								<i class="fa fa-bars"></i>
 							</button>
 							<a class="navbar-brand" href="index.html">
-								<img src="./assets/images/about/Atif_logo1.png" style="width: 120px;" alt="">
+								<img src="./assets/images/about/Atif_logo1.png" style="width: 120px;" alt="Logo">
 							</a>
 						</div><!--/.navbar-header-->
 						<!-- End Header Navigation -->
@@ -79,14 +79,14 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
 							<ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-								<li class="smooth-menu active "><a href="#education">education</a></li>
-								<li class="smooth-menu"><a href="#skills">skills</a></li>
-								<li class="smooth-menu"><a href="#experience">experience</a></li>
-								<li class="smooth-menu"><a href="#profiles">profile</a></li>
-								<li class="smooth-menu"><a href="#portfolio">portfolio</a></li>
-								<li class="smooth-menu"><a href="#clients">clients</a></li>
-								<li class="smooth-menu"><a href="#contact">contact</a></li>
-								<li class="smooth-menu"><a href="#about">about us</a></li>
+								<li class="smooth-menu active"><a href="#education">Education</a></li>
+								<li class="smooth-menu "><a href="#skills">Skills</a></li>
+								<li class="smooth-menu"><a href="#experience">Experience</a></li>
+								<li class="smooth-menu"><a href="#profiles">Profile</a></li>
+								<li class="smooth-menu"><a href="#portfolio">Portfolio</a></li>
+								<li class="smooth-menu"><a href="#clients">Clients</a></li>
+								<li class="smooth-menu"><a href="#contact">Contact</a></li>
+								<li class="smooth-menu"><a href="#about">About Us</a></li>
 							</ul><!--/.nav -->
 						</div><!--/.navbar-collapse -->
 					</div><!--/.container-->
@@ -131,22 +131,22 @@
 									Do not feel pain while working. Despite the exceptions, those who undertake this task have no shortage of pure heartache. Those who are doing all this, it is not their fault, they are the ones who are responsible for this work. Everyone who is the architect of this wonderful life, provides complete clarity with their original plan. No one faces difficulties for the sake of their happiness.
 								</p>
 								<div class="row">
-									<div class="col-sm-3" >
+									<div class="col-sm-2" >
 										<div class="single-about-add-info">
 											<h3 style="font-size: 14px;">phone</h3>
-											<p style="font-size: 14px;">03051015906</p>
+											<p style="font-size: 12px;">03051015906</p>
 										</div>
 									</div>
 									<div class="col-sm-5">
 										<div class="single-about-add-info">
 											<h3 style="font-size: 14px;">email</h3>
-											<p style="font-size: 14px;">se.muhammadatif@gmail.com</p>
+											<p style="font-size: 12px;">se.muhammadatif@gmail.com</p>
 										</div>
 									</div>
-									<div class="col-sm-4">
+									<div class="col-sm-5">
 										<div class="single-about-add-info">
 											<h3 style="font-size: 14px;">website</h3>
-											<p style="font-size: 14px;">M.atif9898.000webhostapp.com</p>
+											<p style="font-size: 12px;">muhammadatif-website.vercel.app</p>
 										</div>
 									</div>
 								</div>
@@ -930,7 +930,7 @@
 										</div>
 										<div class="single-contact-add-info">
 											<h3>website</h3>
-											<p>M.atif9898.000webhostapp.com</p>
+											<p>muhammadatif-website.vercel.app</p>
 										</div>
 									</div>
 								</div><!--/.contact-adress-->
