--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 										<h4 class="title">
 										 superior university of lahore pakistan
 										</h4>
-										<h5>lahore pakistan, asuia</h5>
+										<h5>lahore pakistan, asia</h5>
 										<p class="description">
 											No understanding of pain should be involved in the experience of pleasure, anyone who feels pain in that pleasure should ignore it. The exception confirms the fact that there are certain things that stimulate the desire for pleasure, not their absence.
 										</p>
@@ -244,7 +244,7 @@
 										<h4 class="title">
 											superior university of lahore pakistan
 										</h4>
-										<h5>lahore pakistan, asuia</h5>
+										<h5>lahore pakistan, asia</h5>
 										<p class="description">
 											No understanding of pain should be involved in the experience of pleasure, anyone who feels pain in that pleasure should ignore it. The exception confirms the fact that there are certain things that stimulate the desire for pleasure, not their absence.
 										</p>
@@ -268,7 +268,7 @@
 										<h4 class="title">
 											superior university of lahore pakistan
 										</h4>
-										<h5>lahore pakistan, asuia</h5>
+										<h5>lahore pakistan, asia</h5>
 										<p class="description">
 											No understanding of pain should be involved in the experience of pleasure, anyone who feels pain in that pleasure should ignore it. The exception confirms the fact that there are certain things that stimulate the desire for pleasure, not their absence.
 										</p>
